rudy-db/tests/snapshots/generated_benchmarks@large-5.snap
---
source: rudy-db/tests/mod.rs
expression: location
---
ResolvedLocation {
    function: "large::TestStruct0::method_0",
    file: "/Users/sam/work/rudy/rudy-db/bin/test_binaries/large.rs",
    line: 20,
}
