rudy-db/tests/snapshots/generated_benchmarks@medium-2.snap
---
source: rust-debuginfo/tests/mod.rs
expression: "debug_info.resolve_function(\"main\").unwrap().unwrap()"
snapshot_kind: text
---
ResolvedFunction {
    name: "medium::main",
    address: "0x1000087f4",
    params: [],
}
