rudy-db/tests/snapshots/generated_benchmarks@medium-3.snap
---
source: rust-debuginfo/tests/mod.rs
expression: "debug_info.resolve_function(\"TestStruct0::method_0\").unwrap().unwrap()"
snapshot_kind: text
---
ResolvedFunction {
    name: "medium::TestStruct0::method_0",
    address: "0x100007cdc",
    params: [
        Variable {
            name: "self",
            value: None,
            ty: Some(
                Type {
                    name: "&TestStruct0",
                },
            ),
        },
        Variable {
            name: "param",
            value: None,
            ty: Some(
                Type {
                    name: "i32",
                },
            ),
        },
    ],
}
