rudy-db/tests/snapshots/generated_benchmarks@medium-6.snap
---
source: rudy-db/tests/mod.rs
expression: addrs
snapshot_kind: text
---
ResolvedAddress {
    address: "0x10000858c",
}
