rudy-db/tests/snapshots/generated_benchmarks@small-2.snap
---
source: rust-debuginfo/tests/mod.rs
expression: "debug_info.resolve_function(\"main\").unwrap().unwrap()"
snapshot_kind: text
---
ResolvedFunction {
    name: "small::main",
    address: "0x100008838",
    params: [],
}
