rudy-db/tests/snapshots/generated_benchmarks@small-3.snap
---
source: rudy-db/tests/mod.rs
expression: "debug_info.resolve_function(\"TestStruct0::method_0\").unwrap().unwrap()"
---
ResolvedFunction {
    name: "small::TestStruct0::method_0",
    address: "0x100007d20",
    params: [
        Variable {
            name: "self",
            value: None,
            ty: Some(
                Type {
                    name: "&TestStruct0",
                },
            ),
        },
        Variable {
            name: "param",
            value: None,
            ty: Some(
                Type {
                    name: "i32",
                },
            ),
        },
    ],
}
