rudy-db/tests/snapshots/generated_benchmarks@small-5.snap
---
source: rudy-db/tests/mod.rs
expression: location
---
ResolvedLocation {
    function: "small::TestStruct0::method_0",
    file: "/Users/sam/work/rudy/rudy-db/bin/test_binaries/small.rs",
    line: 20,
}
